--- a/drivers/staging/android/Kconfig
+++ b/drivers/staging/android/Kconfig
@@ -100,13 +100,22 @@ config ANDROID_LOW_MEMORY_KILLER
 	---help---
 	  Register processes to be killed when memory is low
 
-config ANDROID_STE_TIMED_VIBRA
-	bool "ST-Ericsson Timed Output Vibrator"
-	depends on SND_SOC_AB8500
-	depends on ANDROID_TIMED_OUTPUT
+config ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES
+	bool "Android Low Memory Killer: detect oom_adj values"
+	depends on ANDROID_LOW_MEMORY_KILLER
 	default y
-	help
-	  ST-Ericsson's vibrator driver using timed output class device
+	---help---
+	  Detect oom_adj values written to
+	  /sys/module/lowmemorykiller/parameters/adj and convert them
+	  to oom_score_adj values.
+
+config ANDROID_STE_TIMED_VIBRA
+        bool "ST-Ericsson Timed Output Vibrator"
+        depends on SND_SOC_AB8500
+        depends on ANDROID_TIMED_OUTPUT
+        default y
+        help
+          ST-Ericsson's vibrator driver using timed output class device
 
 endif # if ANDROID
 
