--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -139,7 +139,17 @@ config CPU_FREQ_DEFAULT_GOV_SAKURACTIVE
 	  support the hotplug governor. If unsure have a look at
 	  the help section of the driver. Fallback governor will be the
 	  performance governor.
-  
+
+config CPU_FREQ_DEFAULT_GOV_INTERACTIVEQ
+	bool "interactiveq"
+	select CPU_FREQ_GOV_INTERACTIVEQ
+	help
+          Use the CPUFreq governor 'interactivex' as default. This allows
+	  you to get a full dynamic cpu frequency capable system by simply
+	  loading your cpufreq low-level hardware driver, using the
+	  'interactiveq' governor for latency-sensitive workloads.
+	  This governor uses hotplug to shutdown and start up cpu1 when suspended.
+ 
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -282,7 +292,21 @@ config CPU_FREQ_GOV_SAKURACTIVE
   	  
 	  If in doubt, say N.
 
-     
+config CPU_FREQ_GOV_INTERACTIVEQ
+	tristate "'interactiveQ' cpufreq policy governor"
+	help
+	  'interactiveQ' - This driver adds a dynamic cpufreq policy governor
+	  designed for latency-sensitive workloads.
+
+	  This governor attempts to reduce the latency of clock
+	  increases so that the system is more responsive to
+	  interactive workloads.
+
+	  InteractiveQ will hotplug CPU1 when system goes *suspend*.
+
+	  If in doubt, say N.
+
+	       
 menu "x86 CPU frequency scaling drivers"
 depends on X86
 source "drivers/cpufreq/Kconfig.x86"
