--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -163,6 +163,13 @@ config CPU_FREQ_DEFAULT_GOV_INTERACTIVEQ
 	  loading your cpufreq low-level hardware driver, using the
 	  'interactiveq' governor for latency-sensitive workloads.
 	  This governor uses hotplug to shutdown and start up cpu1 when suspended.
+	  
+config CPU_FREQ_DEFAULT_GOV_SAVAGEDZEN
+  	bool "savagedzen"
+  	select CPU_FREQ_GOV_SAVAGEDZEN
+	select CPU_FREQ_GOV_PERFORMANCE
+  	help
+    	  Use the CPUFreq governor 'savaged-zen' as default.
  
 endchoice
 
@@ -326,7 +333,15 @@ config CPU_FREQ_GOV_INTERACTIVEQ
 
 	  If in doubt, say N.
 
+config CPU_FREQ_GOV_SAVAGEDZEN
+	tristate "'savagedzen' cpufreq governor"
+	depends on CPU_FREQ
+	help
+	  'SavagedZen' - a "smartass" based governor
 
+	  If in doubt, say N.
+
+	       
 menu "x86 CPU frequency scaling drivers"
 depends on X86
 source "drivers/cpufreq/Kconfig.x86"
