--- a/arch/arm/configs/cyanogenmod_golden_defconfig
+++ b/arch/arm/configs/cyanogenmod_golden_defconfig
@@ -535,6 +535,7 @@ CONFIG_CPU_FREQ_STAT_DETAILS=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SAKURACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEQ is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SAVAGEDZEN is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVEQ is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
@@ -547,6 +548,7 @@ CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_FREQ_GOV_SAKURACTIVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVEQ=y
 CONFIG_CPU_FREQ_GOV_SAVAGEDZEN=y
+CONFIG_CPU_FREQ_GOV_LULZACTIVEQ=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
