--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -188,6 +188,16 @@ config CPU_FREQ_DEFAULT_GOV_ZENX
         select CPU_FREQ_GOV_ZENX
         help
            Use the CPUFreq governor 'ZenX' as default.
+
+config CPU_FREQ_DEFAULT_GOV_ZZMOOVE
+	bool "zzmoove"
+	select CPU_FREQ_GOV_ZZMOOVE
+	help
+	  ZZMoove governor is based on the modified conservative'smoove'
+	  governor from Michael Weingaertner. Modified by Zane Zaminsky November 2012
+	  to be hotplug-able and optimzed for use with Samsung I9300.
+	  CPU Hotplug modifications partially taken from ktoonservative
+	  governor from ktoonsez KT747-JB kernel
     	  
 endchoice
 
@@ -386,7 +396,15 @@ config CPU_FREQ_GOV_ZENX
 
           If in doubt, say N
 
-	       
+config CPU_FREQ_GOV_ZZMOOVE
+	tristate "'zzmoove' cpufreq governor"
+	depends on CPU_FREQ
+	help
+	  'zzmoove' - ZZMoove governor is based on the modified
+ 	  conservative 'smoove' governor from Michael Weingaertner.
+	  Modified by Zane Zaminsky November 2012 to be
+	  hotplug-able and optimzed for use with Samsung I9300.
+
 menu "x86 CPU frequency scaling drivers"
 depends on X86
 source "drivers/cpufreq/Kconfig.x86"
