golden: update defconfig

--- a/arch/arm/configs/F_kernel_defconfig
+++ b/arch/arm/configs/F_kernel_defconfig
@@ -1313,7 +1313,7 @@ CONFIG_SLHC=y
 # Input device support
 #
 CONFIG_INPUT=y
-# CONFIG_INPUT_FF_MEMLESS is not set
+CONFIG_INPUT_FF_MEMLESS=y
 CONFIG_INPUT_POLLDEV=y
 # CONFIG_INPUT_SPARSEKMAP is not set
 
@@ -2026,9 +2026,8 @@ CONFIG_SND_SOC_AB8500=y
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
-CONFIG_UHID=y
 # CONFIG_HIDRAW is not set
-
+CONFIG_UHID=y
 #
 # USB Input Devices
 #
@@ -2425,7 +2424,6 @@ CONFIG_STAGING=y
 #
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
-CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_RAM_CONSOLE=y
 # CONFIG_ANDROID_RAM_CONSOLE_ENABLE_VERBOSE is not set
 # CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION is not set
@@ -2433,6 +2431,7 @@ CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
+CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 # CONFIG_ANDROID_STE_TIMED_VIBRA is not set
 # CONFIG_POHMELFS is not set
 # CONFIG_LINE6_USB is not set
